# SolitaireGL4

./: .clang-format  .gitignore  CMakeLists.txt
Assets/: cards.json  make_atlas.py  resize_images.sh
CMake/: glad.cmake
Game/: cards.cpp  cards.hpp  keyboard.cpp  keyboard.hpp  main.cpp  types.hpp  window.cpp  window.hpp
Game/Tests/: CMakeLists.txt  cards_tests.cpp
Shaders/: card.frag  card.vert
